--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "expo": "~52.0.7",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.2",
+    "expo-router": "~4.0.6",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
-    "expo-router": "~4.0.6",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "expo-linking": "~7.0.2",
-    "expo-constants": "~17.0.3"
+    "react-native-screens": "~4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
