--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@dev-plugins/react-query": "^0.1.0",
+    "@tanstack/react-query": "^5.60.5",
     "axios": "^1.7.7",
     "expo": "~52.0.7",
     "expo-constants": "~17.0.3",
@@ -18,7 +20,9 @@
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0"
+    "react-native-screens": "~4.1.0",
+    "typescript": "^5.3.3",
+    "@types/react": "~18.3.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
