--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@dev-plugins/react-query": "^0.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^5.60.5",
+    "@types/react": "~18.3.12",
     "axios": "^1.7.7",
     "expo": "~52.0.7",
     "expo-constants": "~17.0.3",
@@ -21,8 +24,8 @@
     "react-native": "0.76.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "typescript": "^5.3.3",
-    "@types/react": "~18.3.12"
+    "react-native-url-polyfill": "^2.0.0",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
