--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dev-plugins/react-query": "^0.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@rnmapbox/maps": "^10.1.33",
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^5.60.5",
     "@types/react": "~18.3.12",
