--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "expo-location": "~18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
