--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "axios": "^1.7.7",
     "expo": "~52.0.7",
     "expo-constants": "~17.0.3",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.6",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.7",
     "expo-status-bar": "~2.0.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "tailwindcss": "^3.4.15",
