--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@dev-plugins/react-query": "^0.1.0",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@rnmapbox/maps": "^10.1.33",
     "@supabase/supabase-js": "^2.46.1",
@@ -19,6 +20,7 @@
     "expo": "~52.0.7",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.1",
     "expo-router": "~4.0.7",
     "expo-status-bar": "~2.0.0",
     "nativewind": "^4.1.23",
@@ -29,8 +31,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.3.3",
-    "expo-location": "~18.0.1"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
