--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@dev-plugins/react-query": "^0.1.0",
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@rnmapbox/maps": "^10.1.33",
     "@supabase/supabase-js": "^2.46.1",
@@ -18,6 +18,7 @@
     "@types/react": "~18.3.12",
     "axios": "^1.7.7",
     "expo": "~52.0.7",
+    "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.1",
@@ -29,6 +30,7 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-url-polyfill": "^2.0.0",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.3.3"
